--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,13 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": [
-    "node_modules",
-    ".git",
-    "Application Data",
-    "AppData",
-    "Cookies",
-    "Local Settings",
-    "Windows"
-  ]
+  "exclude": ["node_modules"]
 }
