--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Z29sZGVuLXZ1bHR1cmUtNDAuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_cBEQ3jV2HP5A2DKsRX5U0TsbvmchFVDWbR1pNGMs02
 NEXT_PUBLIC_API_BASE_URL=http://data-builder:8000/
-NEXT_PUBLIC_HASURA_ENDPOINT=http://43.205.137.0:8080/console
+NEXT_PUBLIC_HASURA_ENDPOINT=http://43.205.137.0:8080/v1/graphql
 HASURA_ADMIN_SECRET="hasura_alpha@123"
 NEXT_PUBLIC_DATABASE_URL="postgresql://postgres:ObScUrEd_16_alpha@deploymentdb.cjcuw2k2ms80.ap-south-1.rds.amazonaws.com:5432/postgres"
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
